<resources>
    <string name="app_name">AndroLite</string>
    <string name="image">image</string>
    <string name="navigation_drawer_open" />
    <string name="navigation_drawer_close" />

    <string name="nav_title_item1">Home</string>
    <string name="web_link_home">https://www.indiatoday.in/</string>

    <string name="nav_title_item2">World News</string>
    <string name="web_link_item2">https://www.bbc.com/news/world</string>

    <string name="nav_title_item3">Videos</string>
    <string name="web_link_item3">https://www.bbc.com/news/av/10462520</string>

    <string name="nav_title_item4">Entertainment</string>
    <string name="web_link_item4">https://www.bbc.com/news/entertainment_and_arts</string>

    <string name="title_communicate">Communicate</string>
    <string name="nav_title_item5">Rate App</string>
    <string name="nav_title_item6">Share App</string>
    <string name="nav_title_item7">Privacy Policy</string>
    <string name="nav_title_item8">About Us</string>
    <string name="nav_title_item9">Exit</string>

    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>

    <string name="about_us_developer">Developer</string>
    <string name="about_us_developer_name">AndroMOB</string>
    <string name="about_us_email">Email</string>
    <string name="about_us_email_text">andromobindia@gmail.com</string>
    <string name="about_us_contact">Contact</string>
    <string name="about_us_contact_text">"+91 9725868313</string>
    <string name="about">About</string>
    <string name="about_description">This is a Universal Lite Webview App, with this app you can easily convert your website to android app
    User friendly UI and simple codes makes it easier for the developers to re-create from this code.
    </string>

    <string name="sure_quit">Are you sure you want to quit?</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
</resources>
