<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_1"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_title_item1" />

        <item
            android:id="@+id/nav_item_2"
            android:icon="@drawable/ic_new_releases"
            android:title="@string/nav_title_item2" />

        <item
            android:id="@+id/nav_item_3"
            android:icon="@drawable/ic_video"
            android:title="@string/nav_title_item3" />

        <item
            android:id="@+id/nav_item_4"
            android:icon="@drawable/ic_feed"
            android:title="@string/nav_title_item4" />

    </group>

    <item android:title="@string/title_communicate">
        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_item_5"
                    android:icon="@drawable/ic_rate"
                    android:title="@string/nav_title_item5" />

                <item
                    android:id="@+id/nav_item_6"
                    android:icon="@drawable/ic_share"
                    android:title="@string/nav_title_item6" />

                <item
                    android:id="@+id/nav_item_7"
                    android:icon="@drawable/ic_privacy"
                    android:title="@string/nav_title_item7" />

                <item
                    android:id="@+id/nav_item_8"
                    android:icon="@drawable/ic_about"
                    android:title="@string/nav_title_item8" />

                <item
                    android:id="@+id/nav_item_9"
                    android:icon="@drawable/ic_exit"
                    android:title="@string/nav_title_item9" />
            </group>

        </menu>
    </item>
</menu>